# web-terminal

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
config/: hosts-example.yaml
docs/: CHANGES.md  PROGRESS.md  TEST-REPORT.md  browser-clipboard-test-guide.md  clipboard-debug-test.md  clipboard-final-solution.md  clipboard-fix-verification.md  complete-guide.md  final-recommendation.md  jump-host-design.md  mac-clipboard-test.md  multi-hop-ssh-refactor-progress.md  native-pty-design.md  scroll-issue-analysis.md  tmux-session-sharing-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPanel.tsx  HostList.tsx  TerminalTabs.tsx  TerminalView.tsx
frontend/src/hooks/: useTerminal.ts  useWebSocket.ts  useWettySocket.ts
frontend/src/services/: api.ts
scripts/: tmux-session.sh
src/: __init__.py  main.py
src/api/: __init__.py  events.py  hosts.py  sessions.py  terminal.py  tmux.py  wetty.py  wetty_proxy.py
src/mcp_server/: __init__.py  server.py
src/models/: __init__.py  database.py  host.py
src/services/: __init__.py  event_service.py  host_manager.py  jump_orchestrator.py  pty_session.py  ssh_session.py  terminal_manager.py  tmux_manager.py  wetty_manager.py
src/utils/: security.py  ssh_command.py
tests/: test_concurrency.py  test_database_migrations.py  test_host_manager.py  test_jump_orchestrator.py  test_ssh_session.py  test_tmux_manager.py
